# cpp-lowlatency-course

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  SYLLABUS.md
.github/scripts/: summarize_tests.py
.github/workflows/: ci.yml
cmake/: CourseAssignment.cmake  Dependencies.cmake  Sanitizers.cmake
common/include/course/: jthread.hpp
modules/00-setup/: CMakeLists.txt  README.md
modules/00-setup/a01-toolchain-hello/: CMakeLists.txt  README.md
modules/01-crash-course/: CMakeLists.txt  README.md
modules/01-crash-course/a01-value-semantics/: CMakeLists.txt  README.md
modules/01-crash-course/a02-strings-vectors-algorithms/: CMakeLists.txt  README.md
modules/01-crash-course/a03-raii-first-contact/: CMakeLists.txt  README.md
modules/02-memory-and-lifetime/: CMakeLists.txt  README.md
modules/02-memory-and-lifetime/a01-raw-memory-lab/: CMakeLists.txt  README.md
modules/02-memory-and-lifetime/a02-rule-of-five/: CMakeLists.txt  README.md
modules/02-memory-and-lifetime/a03-unique-ptr/: CMakeLists.txt  README.md
modules/02-memory-and-lifetime/a04-vector/: CMakeLists.txt  README.md
modules/03-object-model/: CMakeLists.txt  README.md
modules/03-object-model/a01-layout-and-padding/: CMakeLists.txt  README.md
modules/03-object-model/a02-virtual-dispatch/: CMakeLists.txt  README.md
modules/04-templates-and-compile-time/: CMakeLists.txt  README.md
modules/05-allocators-and-dod/: CMakeLists.txt  README.md
modules/05-allocators-and-dod/a02-object-pool/: README.md  (+1 more)
modules/06-hardware-and-benchmarking/: CMakeLists.txt  README.md
modules/07-concurrency-1/: CMakeLists.txt  README.md
modules/08-lock-free/: CMakeLists.txt  README.md
modules/09-networking/: CMakeLists.txt  README.md
modules/10-capstone-order-book/: CMakeLists.txt  README.md
modules/10-capstone-order-book/a03-performance-pass/: CMakeLists.txt  README.md
modules/10-capstone-order-book/a03-performance-pass/bench/: fast_engine_bench.cpp
modules/10-capstone-order-book/a03-performance-pass/include/course/: fast_engine.hpp
modules/10-capstone-order-book/a03-performance-pass/src/: fast_engine.cpp
modules/10-capstone-order-book/a03-performance-pass/tests/: fast_engine_test.cpp
modules/11-capstone-feed-handler/: CMakeLists.txt  README.md
modules/11-capstone-feed-handler/a03-live-pipeline/: CMakeLists.txt  README.md
modules/11-capstone-feed-handler/a03-live-pipeline/include/course/: pipeline.hpp
modules/11-capstone-feed-handler/a03-live-pipeline/src/: pipeline.cpp
modules/11-capstone-feed-handler/a03-live-pipeline/tests/: pipeline_test.cpp
modules/11-capstone-feed-handler/a03-live-pipeline/tools/: replayer.cpp
(+151 files in other folders)
